src/assets/style/page/_login.scss
.login {
  background-image: url('../images/bg-1.png');
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
  height: 100vh;
  position: relative;
  font-size: 16px;

  &-content {
    width: 100%;
    background: linear-gradient(to top, #394555, transparent 100%) !important;
    position: absolute;
    bottom: 0;
    padding-bottom: 20px;
    p, h2 {
      color: #FFF;
    }
  }

  &-title {
    font-size: 43px;
    line-height: 53px;
  }

  &-title2 {
    font-size: 37px;
    line-height: 53px;
  }

  &-subTitle {
    font-size: 19px;
    margin-bottom: 20px;
  }

  &-detail {
    font-size: 15px;
    line-height: 20px;
    margin-bottom: 25px;
  }

  &-toggle {
    margin-top: 16px;
    display: flex;
    justify-content: space-around;
  }

  .loginActions {
    margin-top: 20px;
  }

  .signupActions {
    // margin-top: 10px;
  }

}

